# aws-federation-login-cli

./: .gitignore  .pdm-python  Makefile  README.md  broker.toml  cli.py  federation_url.py  pyproject.toml  requirements-dev.txt  run.sh  setup.cfg
assets/: signin.template.html
aws_custom_identity_broker/: cli.py  federation_url.py
aws_federation_login/: cli.py  config.py  federation_url.py
src/aws_federation_login/: __init__.py  cli.py  config.py  federation_url.py
src/aws_federation_login/assets/: signin.template.html
test/: test_federation_url.py
