[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "aws_federation_login"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "r-tamura", email = "rtamura30@gmail.com" }]
dependencies = [
    # "Jinja2",
    "toml",
    "Jinja2>=3.1.2",
    "boto3>=1.34.4",
    "requests>=2.31.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
aws-federation-login = "aws_federation_login.cli:main"
[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3", "requests-mock>=1.11.0"]

[tool.pdm.scripts]
cli = "pdm run aws-federation-login"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
