[metadata]
name = aws-federation-login
version = 0.0.1

[options]
install_requires =
    boto3
    Jinja2
    prompt_toolkit==1.0.14 # https://github.com/CITGuru/PyInquirer#installation
    PyInquirer
    requests
    toml

[options.entry_points]
console_scripts =
    awsconsole = aws_federation_login.cli:cli