[metadata]
name = aws-federation-login
version = 0.0.4

[options]
install_requires =
    boto3
    Jinja2
    prompt_toolkit==1.0.14 # https://github.com/CITGuru/PyInquirer#installation
    PyInquirer
    requests
    toml

[options.entry_points]
console_scripts =
    aws-federation-login = aws_federation_login.cli:main