[metadata]
name = aws_federation_login
version = 0.0.6
author = r-tamura
author_email = rtamura30@gmail.com

[options]
packages=find:
include_package_data = True
install_requires =
    boto3
    Jinja2
    prompt_toolkit==1.0.14 # https://github.com/CITGuru/PyInquirer#installation
    PyInquirer
    requests
    toml
python_requires = <3.10

[options.package_data]
* = assets/*.html

[options.entry_points]
console_scripts =
    aws-federation-login = aws_federation_login.cli:main